--- a/index.html
+++ b/index.html
@@ -2,50 +2,72 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>HACMGT | Under Construction</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HACMGT</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #0d1117;
-      color: #c9d1d9;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 0.5rem;
-    }
-
-    p {
-      font-size: 1.25rem;
-      color: #8b949e;
-    }
-
-    .logo {
-      width: 80px;
-      margin-bottom: 1.5rem;
-      animation: bounce 1.2s infinite alternate;
-    }
-
-    @keyframes bounce {
-      from { transform: translateY(0); }
-      to { transform: translateY(-10px); }
+    html {
+      scroll-behavior: smooth;
     }
   </style>
 </head>
-<body>
-  <!-- Optional logo -->
-  <!-- <img src="logo.png" alt="HACMGT Logo" class="logo"> -->
+<body class="bg-white text-gray-800 font-sans">
 
-  <h1>🚧 Site Under Construction</h1>
-  <p>We're working hard behind the scenes to bring you something awesome. Check back soon!</p>
+  <!-- Header -->
+  <header class="p-6 shadow-md bg-white sticky top-0 z-10">
+    <div class="max-w-7xl mx-auto flex justify-between items-center">
+      <h1 class="text-2xl font-bold">HACMGT</h1>
+      <nav>
+        <ul class="flex gap-6 text-sm font-medium">
+          <li><a href="#features" class="hover:text-blue-600">Features</a></li>
+          <li><a href="#contact" class="hover:text-blue-600">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Hero -->
+  <section class="text-center py-24 bg-gray-50">
+    <div class="max-w-3xl mx-auto px-4">
+      <h2 class="text-4xl md:text-5xl font-extrabold mb-4">Empowering Innovation</h2>
+      <p class="text-lg md:text-xl mb-8 text-gray-600">HACMGT is your partner in turning ideas into reality. Fast. Scalable. Future-ready.</p>
+      <a href="#contact" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-md font-semibold transition">Get Started</a>
+    </div>
+  </section>
+
+  <!-- Features -->
+  <section id="features" class="py-20 bg-white">
+    <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-12 px-4 text-center">
+      <div>
+        <div class="text-4xl mb-4">⚡</div>
+        <h3 class="text-xl font-bold mb-2">Speed</h3>
+        <p class="text-gray-600">Launch faster with tools designed for modern teams.</p>
+      </div>
+      <div>
+        <div class="text-4xl mb-4">🔧</div>
+        <h3 class="text-xl font-bold mb-2">Flexibility</h3>
+        <p class="text-gray-600">Custom solutions to fit your unique needs.</p>
+      </div>
+      <div>
+        <div class="text-4xl mb-4">🌍</div>
+        <h3 class="text-xl font-bold mb-2">Global Reach</h3>
+        <p class="text-gray-600">Build with scale in mind from day one.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Call to Action -->
+  <section class="py-16 bg-blue-600 text-white text-center">
+    <h2 class="text-3xl font-bold mb-4">Let’s build something amazing together</h2>
+    <p class="mb-6">Start your journey with HACMGT today.</p>
+    <a href="#contact" class="bg-white text-blue-600 font-semibold px-6 py-3 rounded-md hover:bg-gray-100">Join Now</a>
+  </section>
+
+  <!-- Contact (Footer) -->
+  <footer id="contact" class="bg-gray-800 text-white text-center py-6">
+    <p>&copy; 2025 HACMGT. All rights reserved.</p>
+    <p><a href="mailto:info@hacmgt.com" class="underline">info@hacmgt.com</a></p>
+  </footer>
+
 </body>
 </html>
