fix: Altering Contact 'mailto' email address

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <!-- Footer -->
   <footer id="contact" class="bg-gray-800 text-white text-center py-6">
     <p>&copy; 2025 HACMGT. All rights reserved.</p>
-    <p><a href="mailto:info@hacmgt.com" class="underline">info@hacmgt.com</a></p>
+    <p><a href="mailto:sam@hacmgt.com" class="underline">sam@hacmgt.com</a></p>
   </footer>
 
 </body>
